--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,11 @@
         "twig/twig": "^2.11",
         "aura/router": "^3.1",
         "doctrine/orm": "^2.6"
+    },
+    "autoload" : {
+        "psr-4" : {
+            "Blog\\" : "src/"
+        }
     }
+
 }
