test flash message

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "twig/twig": "^2.11",
         "aura/router": "^3.1",
         "doctrine/orm": "^2.6",
-        "zendframework/zend-diactoros": "^2.1"
+        "zendframework/zend-diactoros": "^2.1",
+        "plasticbrain/php-flash-messages": "^1.0"
     },
     "autoload" : {
         "psr-4" : {
