--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "aura/router": "^3.1",
         "doctrine/orm": "^2.6",
         "zendframework/zend-diactoros": "^2.1",
-        "plasticbrain/php-flash-messages": "^1.0"
+        "plasticbrain/php-flash-messages": "^1.0",
+        "phpmailer/phpmailer": "^6.0"
     },
     "autoload" : {
         "psr-4" : {
